--- a/client/src/components/LogInPage/LogInPage.css
+++ b/client/src/components/LogInPage/LogInPage.css
@@ -1,10 +1,12 @@
+div.content {
+	height: 100vh;
+}
+
 div.centerContent {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding-top: 100px;
-	flex-grow: 1;
-	height: 100vh;
 	gap: 20px;
 }
 
@@ -17,6 +19,8 @@ div.input {
 	flex-direction: column;
 	gap: 20px;
 	padding: 20px;
+	width: 100%;
+	max-width: 500px;
 }
 
 div.banner {
@@ -42,4 +46,10 @@ div.options {
 	align-items: center;
 	gap: 10px;
 	font-size: 1.2rem;
+}
+
+@media (max-width: 760px) {
+	div.input {
+		max-width: 250px;
+	}
 }
