--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,14 @@
 	border: 1px solid black;
 }
 
+div#root {
+	height: 100vh;
+}
+
 body {
 	margin: 0;
 }
 
 main {
-	height: 100vh;
+	height: 100%;
 }
