--- a/client/src/components/Logo/Logo.module.css
+++ b/client/src/components/Logo/Logo.module.css
@@ -4,7 +4,18 @@
 	font-size: 2rem;
 	gap: 10px;
 
-	&& span {
+	&& > img {
+		width: 50px;
+		height: 50px;
+	}
+
+	&& > span {
 		color: black;
+	}
+}
+
+@media (max-width: 760px) {
+	.logo > span {
+		display: none;
 	}
 }
