--- a/client/src/components/ChatBox/ChatBox.module.css
+++ b/client/src/components/ChatBox/ChatBox.module.css
@@ -10,3 +10,11 @@
 		text-align: center;
 	}
 }
+
+.friendSelected {
+	display: flex;
+	flex-direction: column;
+	padding: 5px;
+	width: 100%;
+	height: calc(100% - 10px);
+}
