--- a/client/src/components/FriendSearchMenu/FriendSearchMenu.module.css
+++ b/client/src/components/FriendSearchMenu/FriendSearchMenu.module.css
@@ -7,8 +7,16 @@
 	background-color: white;
 	overflow: auto;
 	padding: 20px;
-
 	animation: 0.3s ease-in slideIn;
+	display: flex;
+	flex-direction: column;
+
+	&& > img {
+		height: 30px;
+		width: 30px;
+		align-self: flex-end;
+		margin-bottom: 10px;
+	}
 }
 
 @keyframes slideIn {
