--- a/client/src/components/LogInForm/LogInForm.css
+++ b/client/src/components/LogInForm/LogInForm.css
@@ -1,6 +1,7 @@
 form.accountForm {
 	display: flex;
 	flex-direction: column;
+	gap: 10px;
 
 	&& > input {
 		height: 30px;
@@ -11,6 +12,16 @@ form.accountForm {
 	&& > button {
 		width: 50%;
 		align-self: center;
+		font-size: 1.1rem;
+		background-color: var(--darkBrown);
+		color: var(--lightBrown);
+		border: 0;
+		border-radius: 4px;
+
+		&&:hover,
+		&&:focus {
+			filter: contrast(0.8);
+		}
 	}
 }
 
