--- a/client/src/components/LogInPage/LogInPage.css
+++ b/client/src/components/LogInPage/LogInPage.css
@@ -30,15 +30,12 @@ div.banner {
 	flex-direction: column;
 	align-items: center;
 	gap: 20px;
+	font-size: 1.4rem;
 
 	&& > img {
 		width: 100px;
 		height: 100px;
 		border-radius: 50px;
-	}
-
-	&& > span {
-		font-size: 1.4rem;
 	}
 }
 
@@ -48,6 +45,29 @@ div.options {
 	align-items: center;
 	gap: 10px;
 	font-size: 1.2rem;
+
+	&& > a {
+		text-decoration: none;
+		color: var(--darkestGray);
+
+		&&:hover,
+		&&:focus {
+			filter: contrast(0);
+		}
+	}
+
+	&& > button {
+		border: 0;
+		font-size: 1rem;
+		background-color: var(--darkestGray);
+		color: white;
+		border-radius: 4px;
+
+		&&:hover,
+		&&:focus {
+			filter: contrast(0.8);
+		}
+	}
 }
 
 @media (max-width: 760px) {
