--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px;
+	background-color: var(--lightGray);
 
 	&& > a {
 		text-decoration: none;
