--- a/client/src/components/ChatBox/ChatBox.module.css
+++ b/client/src/components/ChatBox/ChatBox.module.css
@@ -4,6 +4,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-color: var(--lightGray);
 
 	&& > span {
 		font-size: 1.5rem;
@@ -14,7 +15,13 @@
 .friendSelected {
 	display: flex;
 	flex-direction: column;
-	padding: 5px;
 	width: 100%;
-	height: calc(100% - 10px);
+	height: 100%;
+
+	&& > h2 {
+		background-color: var(--darkGray);
+		margin: 0;
+		padding: 10px;
+		color: white;
+	}
 }
