--- a/client/src/components/FriendSearchForm/FriendSearchForm.module.css
+++ b/client/src/components/FriendSearchForm/FriendSearchForm.module.css
@@ -5,9 +5,25 @@
 
 .input {
 	display: flex;
-	justify-content: space-between;
+	gap: 5px;
 
 	&& > label {
 		display: flex;
+	}
+
+	&& > input {
+		background-color: var(--lightGray);
+	}
+
+	&& > button {
+		background-color: var(--darkBrown);
+		color: var(--lightBrown);
+		border: 0;
+		border-radius: 4px;
+
+		&&:hover,
+		&&:focus {
+			filter: contrast(0.8);
+		}
 	}
 }
