--- a/client/src/components/FriendSearchResult/FriendSearchResult.module.css
+++ b/client/src/components/FriendSearchResult/FriendSearchResult.module.css
@@ -18,4 +18,20 @@
 		height: 100px;
 		width: 100px;
 	}
+
+	&& > button {
+		background-color: var(--darkBrown);
+		color: var(--lightBrown);
+		border: 0;
+		border-radius: 4px;
+
+		&&:hover,
+		&&:focus {
+			filter: contrast(0.8);
+		}
+
+		&&:disabled {
+			filter: contrast(0.6);
+		}
+	}
 }
