--- a/client/src/components/Logo/Logo.module.css
+++ b/client/src/components/Logo/Logo.module.css
@@ -3,6 +3,12 @@
 	align-items: center;
 	font-size: 2rem;
 	gap: 10px;
+	transition: 1s transform;
+
+	&&:hover,
+	&&:focus {
+		transform: scale(1.1);
+	}
 
 	&& > img {
 		width: 50px;
