--- a/client/src/components/UserDropDown/UserDropDown.module.css
+++ b/client/src/components/UserDropDown/UserDropDown.module.css
@@ -3,10 +3,28 @@
 	top: 60px;
 	right: 12px;
 	z-index: 1;
-	background-color: white;
+	background-color: var(--darkGray);
+	display: flex;
+	flex-direction: column;
+	font-size: 1.1rem;
+	color: white;
 
 	animation: rotateDown 0.4s ease-in-out forwards;
 	transform-origin: top center;
+
+	&& * {
+		padding: 5px;
+	}
+
+	&& *:hover,
+	&& *:focus {
+		filter: contrast(0.8);
+	}
+
+	&& > a {
+		text-decoration: none;
+		color: white;
+	}
 }
 
 @keyframes rotateDown {
