--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,10 +1,16 @@
 footer {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	margin-top: auto;
 	background-color: var(--darkGray);
 	color: var(--lightBrown);
+	padding: 5px;
+
+	&& > p {
+		margin: 0;
+	}
 
 	&& > p > a {
 		text-decoration: none;
